FIX: items align

--- a/src/scss/window.scss
+++ b/src/scss/window.scss
@@ -215,6 +215,8 @@ $module_name: 'meta-MetaWindow';
         .meta-wrap {
             overflow: hidden;
             min-height: 100%;
+                align-items: center;
+    justify-content: center;
 
             img {
                 margin: 0;
